cmake_minimum_required(VERSION 3.26)
project(CsSem1 C)

set(CMAKE_C_STANDARD 23)

add_executable(CsSem1 main.c
        a1p2.c
        a1_p3.c
        a1_p4.c
        a1_p5.c
        a1_p6.c
        a2_p1.c
        a2_p2.c
        a2_p3.c
        a2_p4.c
        a2_p5.c
        a2_p5.c
        a2_p5.c
        a2_p6.c
        a2_p7.c
        a2_p8.c
        a2_p9.c
        a2_p10.c
        a3_p1.c
        a3_p2.c
        a3_p4.c
        a3_p3.c
        a3_p5.c
        test.c
        a3_p6.c
        a3_p7.c
        a3_p8.c
        a3_p9.c
        a3_p10.c
        a3_p11.c
        a4_p1.c
        a4_p2.c
        a4_p3.c
        a4_p4.c
        a4_p5.c
        a4_p6.c
        a4_p7.c
        a4_p8.c
        a4_p9.c
        a4_p10.c
        a4_p11.c
        a4_p12.c
        a5_p1.c
        a5_p2.c
        a5_p3.c
        a5_p4.c
        a5_p5.c
        a5_p6.c
        a5_p7.c
        a5_p8.c
        a5_p10.c
        a5_p11.c
        a5_p9.c
        a6_p1.c
        a6_p2.c
        a6_p3.c
        a6_p4.c
        a6_p5.c
        a6_p6.c
        a6_p7.c
        a6_p8.c
        a6_p9.c
        linked_list.h
        linked_list.c
        use_linked_list.c
        a7_p2.c
        a7_p4.c
        a7_p5.c
        a7_p6.c
        stack.h
        stack.c
        teststack.c
        queue.h
        queue.c
        testqueue.c
        a8_p5.c
        a8_p6.c
        a8_p7.c
        a8_p8.c
        a8_p9.c
        convertingstack.c
)
